# VideoEditor

./: .gitignore  CMakeLists.txt  README.md
App/: CMakeLists.txt  VideoEditorCmd.cpp  main.cpp  xmake.lua
App/Platform/: WindowsPlatform.cpp  WindowsPlatform.hpp
App/Shader/: frag.hlsl  vert.hlsl
CMD/: CMakeLists.txt  main.cpp  xmake.lua
Core/: AudioBuffer.cpp  AudioBuffer.h  AudioDecoder.cpp  AudioDecoder.h  AudioFormat.cpp  AudioFormat.h  AudioPCMBuffer.cpp  AudioPCMBuffer.h  AudioPlayer.cpp  AudioPlayer.h  CMakeLists.txt  ExportSession.cpp  ExportSession.h  FFmpeg.h  FVideoEditor.h  FrameWrapper.cpp  FrameWrapper.h  Image.cpp  Image.h  ImageCompositionPipeline.cpp  ImageCompositionPipeline.h  ImagePlayer.cpp  ImagePlayer.h  PixelBuffer.cpp  PixelBuffer.h  PixelBufferPool.cpp  PixelBufferPool.h  Player.cpp  Player.h  PlayerImageQueueItem.cpp  PlayerImageQueueItem.h  RenderContext.h  Resolution.h  SeekingContext.cpp  SeekingContext.h  Semaphore.cpp  Semaphore.h  SimpleTimer.cpp  SimpleTimer.h  VideoDecoder.cpp  (+12 more)
Core/Time/: FTime.h  MediaTime.cpp  MediaTime.h  MediaTimeMapping.cpp  MediaTimeMapping.h  MediaTimeRange.cpp  MediaTimeRange.h
Core/Track/: AudioTrack.cpp  AudioTrack.h  FTrack.h  ImageTrack.cpp  ImageTrack.h  MediaTrack.h  VideoTrack.cpp  VideoTrack.h
Core/Utility/: FUtility.h  ScopeGuard.h  Thread.cpp  Thread.h  Util.cpp  Util.h
GLKit/: CMakeLists.txt  GLIndexBuffer.cpp  GLIndexBuffer.h  GLKit.h  GLShader.cpp  GLShader.h  GLTexture.cpp  GLTexture.h  GLVertexArray.cpp  GLVertexArray.h  GLVertexBuffer.cpp  GLVertexBuffer.h  GLVertexBufferLayout.h  GLVertexObject.cpp  GLVertexObject.h  xmake.lua
QtApp/: CMakeLists.txt  Player.cpp  SeekingContext.cpp  SeekingContext.h  VideoFrameReceiver.h  main.cpp
QtApp/UI/: mainwindow.h
Resources/: VideoEditor_zh_CN.ts  test_project.json
Test/: Test.cpp  Test.h
UI/: mainwindow.cpp  mainwindow.h  mainwindow.ui
VideoEditor/: xmake.lua
VideoEditor/include/VideoEditor/: AudioPlayer.hpp  AudioTrack.hpp  ExportSession.hpp  ImageCompositionPipeline.hpp  ImagePlayer.hpp  ImageTrack.hpp  MediaTrack.hpp  RenderContext.hpp  Resolution.hpp  Util.hpp  VideoDescription.hpp  VideoEditor.hpp  VideoInstruction.hpp  VideoProject.hpp  VideoTrack.hpp
VideoEditor/src/: AudioPlayer.cpp  AudioTrack.cpp  ExportSession.cpp  ImageCompositionPipeline.cpp  ImagePlayer.cpp  Util.cpp  VideoDescription.cpp  VideoProject.cpp  VideoTrack.cpp
